--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
 
-  "name": "LinkedIn Prettifier",
-  "short_name": "LinkedIn Prettifier",
+  "name": "LinkedIn da Vinci",
+  "short_name": "LinkedIn da Vinci",
   "description": "Replaces default LinkedIn company and school pictures with prettier versions",
   "author": "Kelly Lougheed",
   "version": "1.0",
